# camera-gstreamer

./: .gitignore  CMakeLists.txt  configure.ac
plugins/: CMakeLists.txt
plugins/rtph264pass/: CMakeLists.txt  gstrtph264pass.c  gstrtph264pass.h
src/: CameraGstreamer.cpp  CameraGstreamer.h  CamerasManager.cpp  CamerasManager.h  Makefile.am  UdpServerSocket.h  camera-interface.cpp  test_link.cpp
